--- a/app/views/left_menu/_projects.rhtml
+++ b/app/views/left_menu/_projects.rhtml
@@ -4,7 +4,11 @@
     <ul>
         <% user_projects_by_root.keys.sort.each do |root| %>
             <% if !@project.nil? %>
-                <li><%= link_to_if !(root.identifier == @project.identifier), h(root.name), :controller => 'projects', :action => 'show', :id => root %></li>
+                <% if jump_to_current_view_implemented == true %>
+                    <li><%= link_to_if !(root.identifier == @project.identifier), h(root.name), :controller => 'projects', :action => 'show', :id => root, :jump => current_menu_item %></li>
+                <% else %>
+                    <li><%= link_to_if !(root.identifier == @project.identifier), h(root.name), :controller => 'projects', :action => 'show', :id => root %></li>
+                <% end %>
             <% else %>
                 <li><%= link_to h(root.name), :controller => 'projects', :action => 'show', :id => root %></li>
             <% end %>
@@ -12,7 +16,11 @@
                 <% user_projects_by_root[root].sort.each do |project| %>
                     <% next if project == root %>
                         <% if !@project.nil? %>
-                            <li><%= link_to_if !(project.identifier == @project.identifier), h(project.name), :controller => 'projects', :action => 'show', :id => project %></li>
+                            <% if jump_to_current_view_implemented == true %>
+                                <li><%= link_to_if !(project.identifier == @project.identifier), h(project.name), :controller => 'projects', :action => 'show', :jump => current_menu_item %></li>
+                            <% else %>
+                                <li><%= link_to_if !(project.identifier == @project.identifier), h(project.name), :controller => 'projects', :action => 'show', :id => project %></li>
+                            <% end %>
                         <% else %>
                             <li><%= link_to h(project.name), :controller => 'projects', :action => 'show', :id => project %></li>
                         <% end %>
