Base-layout modification after the obviation related to the change in flash-message rendering in the @base@-layout in Redmine 0.8.1.
This wraps the flash-message rendering in the @base@-layout in _app/views/layouts/base.rhtml_ in a new if control-structure which defines the control based on the return-value (true/false) of ApplicationHelper::CollapseApplicationHelperPatch::render_flash_messages_implemented.

This commit resolves issue #183.

git-svn-id: svn://evil-dev.net:3690/redmine-collapse/trunk@11 1809a232-8a5f-0410-be6b-a332444e9cb2

--- a/app/views/layouts/base.rhtml
+++ b/app/views/layouts/base.rhtml
@@ -94,8 +94,12 @@
         </div>
         
         <div id="content">
-            <%= content_tag('div', flash[:error], :class => 'flash error') if flash[:error] %>
-            <%= content_tag('div', flash[:notice], :class => 'flash notice') if flash[:notice] %>
+            <% if render_flash_messages_implemented == true %>
+                <%= render_flash_messages %>
+            <% else %>
+                <%= content_tag('div', flash[:error], :class => 'flash error') if flash[:error] %>
+                <%= content_tag('div', flash[:notice], :class => 'flash notice') if flash[:notice] %>
+            <% end %>
             <%= yield %>
         </div>
     </div>
