Refactored the @selected-tab@-logics in the @base@-view to a Ruby helper-method, which is implemented as a instance-method of the module @CollapseApplicationHelperPatch@.
This commit resolves issue #184.

git-svn-id: svn://evil-dev.net:3690/redmine-collapse/trunk@12 1809a232-8a5f-0410-be6b-a332444e9cb2

--- a/app/views/layouts/base.rhtml
+++ b/app/views/layouts/base.rhtml
@@ -52,23 +52,7 @@
                 <div style="width:200px">
                     <% tabs = left_menu_tabs %>
                     <% selected_tab = params[:tab] ? params[:tab].to_s : tabs.first[:name] %>
-                    
-                    <% if ( Setting.plugin_redmine_collapse['show_projects_tab'] == '1' ) && ( params[:controller] == 'welcome' ||
-                            params[:controller] == 'account' ||
-                            params[:controller] == 'admin' ||
-                            params[:controller] == 'users' ||
-                            params[:controller] == 'roles' ||
-                            params[:controller] == 'trackers' ||
-                            params[:controller] == 'issue_statuses' ||
-                            params[:controller] == 'workflows' ||
-                            params[:controller] == 'custom_fields' ||
-                            params[:controller] == 'enumerations' ||
-                            params[:controller] == 'settings' ) then
-                         selected_tab = 'projects'
-                       else
-                         selected_tab = 'actions'
-                       end
-                    %>
+                    <% selected_tab = left_menu_selected_tab %>
                     
                     <div class="tabs">
                         <ul>
