Added a new @div@ with the id @leftmenu-<current_redmine_theme>@ in the base-layout, surrounding the existing @div@ with id @leftmenu@.
This commit references issue #239.


git-svn-id: svn://evil-dev.net:3690/redmine-collapse/sandbox/060409_1001-ThemeRespection@28 1809a232-8a5f-0410-be6b-a332444e9cb2

--- a/app/views/layouts/base.rhtml
+++ b/app/views/layouts/base.rhtml
@@ -47,6 +47,7 @@
     </div>
     
     <%= tag('div', {:id => 'main', :class => 'nosidebar'}, true) %>
+      <div id="leftmenu-<%= current_redmine_theme %>">
         <div id="leftmenu">
             <div id="leftmenu-contents">
                 <div style="width:200px">
@@ -76,6 +77,7 @@
             
             <div id="leftmenu-border" onclick="toggle_leftMenu('leftmenu-contents')"></div>
         </div>
+      </div>
         
         <div id="content">
             <% if render_flash_messages_implemented == true %>
