--- a/assets/stylesheets/collapse.css
+++ b/assets/stylesheets/collapse.css
@@ -4,19 +4,20 @@
 
 /***** Overloading Redmine Core layout-selectors *****/
 #main {
-    background-color: #FFFFFF;
+    background-color: inherit;
     padding: 2px 0px 0px 14px;
 }
 
 html>body #content { height: auto; min-height: 600px; overflow: auto; }
 
+/******************** DEFAULT THEME ********************/
 
 /*****
 * CSS for Collapse (Left)
 *****/
 
 /***** The box wherein the sidebar resides *****/
-#main #leftmenu {
+#main #leftmenu-default #leftmenu {
     float: left;
     min-height: 600px;
     padding: 0;
@@ -25,7 +26,7 @@ html>body #content { height: auto; min-height: 600px; overflow: auto; }
 }
 
 /***** The seperator between the box wherein the sidebar resides and the content *****/
-#main #leftmenu #leftmenu-border {
+#main #leftmenu-default #leftmenu #leftmenu-border {
     position: absolute;
     right: -5px;
     top: 35px;
@@ -39,7 +40,7 @@ html>body #content { height: auto; min-height: 600px; overflow: auto; }
 }
 
 /***** The actual sidebar wherein tabs reside *****/
-#main #leftmenu #leftmenu-contents {
+#main #leftmenu-default #leftmenu #leftmenu-contents {
     position: relative;
     width: 200px;
     text-align: left;
@@ -51,18 +52,18 @@ html>body #content { height: auto; min-height: 600px; overflow: auto; }
 *****/
 
 /***** The global tab layout *****/
-#leftmenu .tabs { height: 2.95em; border-bottom: 1px solid #BBBBBB; margin-bottom: 1.2em; position: relative; }
+#leftmenu-default #leftmenu .tabs { height: 2.95em; border-bottom: 1px solid #BBBBBB; margin-bottom: 1.2em; position: relative; }
 
-#leftmenu .tabs ul { margin: 0; position: absolute; bottom: -2px; padding-left: 8px; }
-#leftmenu .tabs>ul { bottom: -1px; } /* others */
-#leftmenu .tabs ul li {
+#leftmenu-default #leftmenu .tabs ul { margin: 0; position: absolute; bottom: -2px; padding-left: 8px; }
+#leftmenu-default #leftmenu .tabs>ul { bottom: -1px; } /* others */
+#leftmenu-default #leftmenu .tabs ul li {
     float: left;
     list-style-type: none;
     white-space: nowrap;
     margin-right: 8px;
     background: #FFF;
 }
-#leftmenu .tabs ul li a{
+#leftmenu-default #leftmenu .tabs ul li a{
     display: block;
     font-size: 0.9em;
     text-decoration: none;
@@ -74,35 +75,35 @@ html>body #content { height: auto; min-height: 600px; overflow: auto; }
     color: #777;
     font-weight: bold;
 }
-#leftmenu .tabs ul li a:hover {
+#leftmenu-default #leftmenu .tabs ul li a:hover {
     background-color: #FFFFDD;
     text-decoration: none;
 }
-#leftmenu .tabs ul li a.selected {
+#leftmenu-default #leftmenu .tabs ul li a.selected {
     background-color: #FFF;
     border: 1px solid #BBBBBB;
     border-bottom: 1px solid #FFF;
 }
-#leftmenu .tabs ul li a.selected:hover {
+#leftmenu-default #leftmenu .tabs ul li a.selected:hover {
     background-color: #FFF;
 }
 
 /***** The projects tab *****/
-#main #leftmenu #tab-content-projects ul {
+#main #leftmenu-default #leftmenu #tab-content-projects ul {
     margin-left: -25px;
 }
-#main #leftmenu #tab-content-projects ul ul {
+#main #leftmenu-default #leftmenu #tab-content-projects ul ul {
     margin-bottom: 3px;
 }
-#main #leftmenu #tab-content-projects a {
+#main #leftmenu-default #leftmenu #tab-content-projects a {
     text-decoration: none;
     display: block;
  }
-#main #leftmenu #tab-content-projects a.current {
+#main #leftmenu-default #leftmenu #tab-content-projects a.current {
     font-weight: bold;
 }
 
 /***** The actions tab *****/
-#main #leftmenu #tab-content-actions {
+#main #leftmenu-default #leftmenu #tab-content-actions {
     text-align: left;
 }
