--- a/assets/stylesheets/collapse.css
+++ b/assets/stylesheets/collapse.css
@@ -52,7 +52,8 @@ html>body #content { height: auto; min-height: 600px; overflow: auto; }
 *****/
 
 /***** The global tab layout *****/
-#leftmenu-default #leftmenu .tabs { height: 2.95em; border-bottom: 1px solid #BBBBBB; margin-bottom: 1.2em; position: relative; }
+#leftmenu-default #leftmenu .tabs { height: 2.95em; border-bottom: 1px solid #BBBBBB; position: relative; }
+#leftmenu-default #leftmenu .tab-content { margin-top: 1.2em; }
 
 #leftmenu-default #leftmenu .tabs ul { margin: 0; position: absolute; bottom: -2px; padding-left: 8px; }
 #leftmenu-default #leftmenu .tabs>ul { bottom: -1px; } /* others */
