Added styles for the Squeejee-theme with @#leftmenu-squeejee@-@id@ following r28 and r29.
This commit references issue #239.


git-svn-id: svn://evil-dev.net:3690/redmine-collapse/sandbox/060409_1001-ThemeRespection@35 1809a232-8a5f-0410-be6b-a332444e9cb2

--- a/assets/stylesheets/collapse.css
+++ b/assets/stylesheets/collapse.css
@@ -303,3 +303,117 @@ html>body #content { height: auto; min-height: 600px; overflow: auto; }
 #main #leftmenu-classic #leftmenu #tab-content-actions {
     text-align: left;
 }
+
+/******************** SQUEEJEE THEME ********************/
+
+/*****
+* CSS for Collapse (Left)
+*****/
+
+/***** The box wherein the sidebar resides *****/
+#main #leftmenu-squeejee #leftmenu {
+    float: left;
+    min-height: 600px;
+    padding: 0;
+    position: relative;
+    margin-right: 15px;
+}
+
+/***** The seperator between the box wherein the sidebar resides and the content *****/
+#main #leftmenu-squeejee #leftmenu #leftmenu-border {
+    position: absolute;
+    right: -5px;
+    top: 38px;
+    height: 95%;
+    width: 5px;
+    background-image: url(../images/border_collapse.gif);
+    background-repeat: no-repeat;
+    background-position: 0 90px;
+    background-color: #CCCCCC;
+    cursor:pointer;
+}
+
+/***** The actual sidebar wherein tabs reside *****/
+#main #leftmenu-squeejee #leftmenu #leftmenu-contents {
+    position: relative;
+    width: 200px;
+    text-align: left;
+}
+
+/*****
+* CSS for Left Collapse Tabs
+*****/
+
+/***** The global tab layout *****/
+#leftmenu-squeejee #leftmenu .tabs { height: 2.90em; border-bottom: 1px solid #BBBBBB; position: relative; }
+#leftmenu-squeejee #leftmenu .tab-content { margin-top: 1.2em; }
+
+#leftmenu-squeejee #leftmenu .tabs ul { margin: 0; position: absolute; bottom: -2px; padding-left: 8px; }
+#leftmenu-squeejee #leftmenu .tabs>ul { bottom: -1px; } /* others */
+#leftmenu-squeejee #leftmenu .tabs ul li {
+    float: left;
+    list-style-type: none;
+    white-space: nowrap;
+    margin-right: 8px;
+    background: #FFF;
+}
+#leftmenu-squeejee #leftmenu .tabs ul li a{
+    display: block;
+    font-size: 0.9em;
+    text-decoration: none;
+    line-height: 1.3em;
+    padding: 4px 6px 4px 6px;
+    border: 1px solid #ccc;
+    border-bottom: 1px solid #BBBBBB;
+    background-color: #E0E0E0;
+    color: #777;
+    font-weight: bold;
+}
+#leftmenu-squeejee #leftmenu .tabs ul li a:hover {
+    background-color: #FFFFDD;
+    text-decoration: none;
+}
+#leftmenu-squeejee #leftmenu .tabs ul li a.selected {
+    background-color: #333;
+    color: #8C8C8C;
+    border: 1px solid #BBBBBB;
+    border-bottom: 1px solid #333;
+}
+#leftmenu-squeejee #leftmenu .tabs ul li a.selected:hover {
+    background-color: #333;
+}
+
+/***** The global tab design *****/
+#main #leftmenu-squeejee #leftmenu h1,
+#main #leftmenu-squeejee #leftmenu h2,
+#main #leftmenu-squeejee #leftmenu h3,
+#main #leftmenu-squeejee #leftmenu h4,
+#main #leftmenu-squeejee #leftmenu h5 {
+    color: #efefef;
+    text-shadow: 1px 1px 1px rgba(0,0,0,.8);
+}
+
+#main #leftmenu-squeejee #leftmenu {
+    color: #ccc;
+    text-shadow: 1px 1px 1px rgba(0,0,0,.6);
+}
+
+/***** The projects tab *****/
+#main #leftmenu-squeejee #leftmenu #tab-content-projects ul {
+    margin-left: -25px;
+}
+#main #leftmenu-squeejee #leftmenu #tab-content-projects ul ul {
+    margin-bottom: 3px;
+}
+#main #leftmenu-squeejee #leftmenu #tab-content-projects a {
+    text-decoration: none;
+    display: block;
+ }
+#main #leftmenu-squeejee #leftmenu #tab-content-projects a.current {
+    font-weight: bold;
+}
+
+/***** The actions tab *****/
+#main #leftmenu-squeejee #leftmenu #tab-content-actions {
+    text-align: left;
+}
