--- a/assets/stylesheets/collapse.css
+++ b/assets/stylesheets/collapse.css
@@ -304,6 +304,104 @@ html>body #content { height: auto; min-height: 600px; overflow: auto; }
     text-align: left;
 }
 
+/******************** BASECAMP THEME ********************/
+
+/*****
+* CSS for Collapse (Left)
+*****/
+
+/***** The box wherein the sidebar resides *****/
+#main #leftmenu-basecamp #leftmenu {
+    float: left;
+    min-height: 600px;
+    padding: 0;
+    position: relative;
+    margin-right: 15px;
+}
+
+/***** The seperator between the box wherein the sidebar resides and the content *****/
+#main #leftmenu-basecamp #leftmenu #leftmenu-border {
+    position: absolute;
+    right: -5px;
+    top: 23px;
+    height: 95%;
+    width: 5px;
+    background-image: url(../images/border_collapse.gif);
+    background-repeat: no-repeat;
+    background-position: 0 90px;
+    background-color: #CCCCCC;
+    cursor:pointer;
+}
+
+/***** The actual sidebar wherein tabs reside *****/
+#main #leftmenu-basecamp #leftmenu #leftmenu-contents {
+    position: relative;
+    width: 200px;
+    text-align: left;
+}
+
+/*****
+* CSS for Left Collapse Tabs
+*****/
+
+/***** The global tab layout *****/
+#leftmenu-basecamp #leftmenu .tabs { height: 1.95em; border-bottom: 1px solid #BBBBBB; position: relative; }
+#leftmenu-basecamp #leftmenu .tab-content { margin-top: 1.2em; }
+
+#leftmenu-basecamp #leftmenu .tabs ul { margin: 0; position: absolute; bottom: -2px; padding-left: 8px; }
+#leftmenu-basecamp #leftmenu .tabs>ul { bottom: -1px; } /* others */
+#leftmenu-basecamp #leftmenu .tabs ul li {
+    float: left;
+    list-style-type: none;
+    white-space: nowrap;
+    margin-right: 8px;
+    background: #FFF;
+}
+#leftmenu-basecamp #leftmenu .tabs ul li a{
+    display: block;
+    font-size: 0.9em;
+    text-decoration: none;
+    line-height: 1.3em;
+    padding: 4px 6px 4px 6px;
+    border: 1px solid #ccc;
+    border-bottom: 1px solid #BBBBBB;
+    background-color: #FFF;
+    color: #777;
+    font-weight: bold;
+}
+#leftmenu-basecamp #leftmenu .tabs ul li a:hover {
+    background-color: #FFFFDD;
+    text-decoration: none;
+}
+#leftmenu-basecamp #leftmenu .tabs ul li a.selected {
+    background-color: #EEEEEE;
+    border: 1px solid #BBBBBB;
+    border-bottom: 1px solid #EEE;
+}
+#leftmenu-basecamp #leftmenu .tabs ul li a.selected:hover {
+    background-color: #EEE;
+}
+
+/***** The projects tab *****/
+#main #leftmenu-basecamp #leftmenu #tab-content-projects ul {
+    margin-left: -25px;
+}
+#main #leftmenu-basecamp #leftmenu #tab-content-projects ul ul {
+    margin-bottom: 3px;
+}
+#main #leftmenu-basecamp #leftmenu #tab-content-projects a {
+    text-decoration: none;
+    display: block;
+ }
+#main #leftmenu-basecamp #leftmenu #tab-content-projects a.current {
+    font-weight: bold;
+}
+
+/***** The actions tab *****/
+#main #leftmenu-basecamp #leftmenu #tab-content-actions {
+    text-align: left;
+}
+
 /******************** SQUEEJEE THEME ********************/
 
 /*****
