Fixed the error that subprojects in projects-tab are missing the @project-id@ in their URLs when @jump_to_current_view_implemented == true@.
This commit resolves issue #241.


git-svn-id: svn://evil-dev.net:3690/redmine-collapse/trunk@48 1809a232-8a5f-0410-be6b-a332444e9cb2

--- a/app/views/left_menu/_projects.rhtml
+++ b/app/views/left_menu/_projects.rhtml
@@ -17,7 +17,7 @@
                     <% next if project == root %>
                         <% if !@project.nil? %>
                             <% if jump_to_current_view_implemented == true %>
-                                <li><%= link_to_if !(project.identifier == @project.identifier), h(project.name), :controller => 'projects', :action => 'show', :jump => current_menu_item %></li>
+                                <li><%= link_to_if !(project.identifier == @project.identifier), h(project.name), :controller => 'projects', :action => 'show', :id => project, :jump => current_menu_item %></li>
                             <% else %>
                                 <li><%= link_to_if !(project.identifier == @project.identifier), h(project.name), :controller => 'projects', :action => 'show', :id => project %></li>
                             <% end %>
