--- a/app/views/layouts/base.rhtml
+++ b/app/views/layouts/base.rhtml
@@ -87,13 +87,15 @@
                 <%= content_tag('div', flash[:notice], :class => 'flash notice') if flash[:notice] %>
             <% end %>
             <%= yield %>
+            <%= call_hook :view_layouts_base_content %>
+            <div style="clear:both;"></div>
         </div>
     </div>
     
     <div id="ajax-indicator" style="display:none;"><span><%= l(:label_loading) %></span></div>
     
     <div id="footer">
-        Powered by <%= link_to Redmine::Info.app_name, Redmine::Info.url %> &copy; 2006-2008 Jean-Philippe Lang
+        Powered by <%= link_to Redmine::Info.app_name, Redmine::Info.url %> &copy; 2006-2009 Jean-Philippe Lang
     </div>
 </div>
 <%= call_hook :view_layouts_base_body_bottom %>
