--- a/app/views/layouts/base.rhtml
+++ b/app/views/layouts/base.rhtml
@@ -36,10 +36,18 @@
                 <%= link_to l(:label_search), {:controller => 'search', :action => 'index', :id => @project}, :accesskey => accesskey(:search) %>:
                 <%= text_field_tag 'q', @question, :size => 20, :class => 'small', :accesskey => accesskey(:quick_search) %>
             <% end %>
-            <%= render :partial => 'layouts/project_selector' if User.current.memberships.any? && (Setting.plugin_redmine_collapse['hide_project_selector'] == '0') %>
+            <% if render_project_hierarchy_implemented == true %>
+                <%= render_project_jump_box if (Setting.plugin_redmine_collapse['hide_project_selector'] == '0') %>
+            <% else %>
+                <%= render :partial => 'layouts/project_selector' if User.current.memberships.any? && (Setting.plugin_redmine_collapse['hide_project_selector'] == '0') %>
+            <% end %>
         </div>
         
-        <h1><%= h(@project && !@project.new_record? ? @project.name : Setting.app_title) %></h1>
+        <% if page_header_title_implemented == true %>
+            <h1><%= page_header_title %></h1>
+        <% else %>
+            <h1><%= h(@project && !@project.new_record? ? @project.name : Setting.app_title) %></h1>
+        <% end %>
         
         <div id="main-menu">
             <%= render_main_menu(@project) %>
