--- a/app/views/left_menu/_projects.rhtml
+++ b/app/views/left_menu/_projects.rhtml
@@ -1,20 +1,29 @@
 <h3><%= l(:label_project_plural) %></h3>
-<% user_projects_by_root = User.current.projects.find(:all, :include => :parent).group_by(&:root) %>
+
+<% if render_project_hierarchy_implemented == true %>
+    <% user_projects = User.current.projects.find(:all) %>
+<% else %>
+    <% user_projects_by_root = User.current.projects.find(:all, :include => :parent).group_by(&:root) %>
+<% end %>
+
 <div id="projects">
-    <ul>
-        <% user_projects_by_root.keys.sort.each do |root| %>
-            <% if !@project.nil? %>
-                <% if jump_to_current_view_implemented == true %>
-                    <li><%= link_to_if !(root.identifier == @project.identifier), h(root.name), :controller => 'projects', :action => 'show', :id => root, :jump => current_menu_item %></li>
+    <% if render_project_hierarchy_implemented == true %>
+        <%= render_involved_projects_list(user_projects) %>
+    <% else %>
+        <ul>
+            <% user_projects_by_root.keys.sort.each do |root| %>
+                <% if !@project.nil? %>
+                    <% if jump_to_current_view_implemented == true %>
+                        <li><%= link_to_if !(root.identifier == @project.identifier), h(root.name), :controller => 'projects', :action => 'show', :id => root, :jump => current_menu_item %></li>
+                    <% else %>
+                        <li><%= link_to_if !(root.identifier == @project.identifier), h(root.name), :controller => 'projects', :action => 'show', :id => root %></li>
+                    <% end %>
                 <% else %>
-                    <li><%= link_to_if !(root.identifier == @project.identifier), h(root.name), :controller => 'projects', :action => 'show', :id => root %></li>
+                    <li><%= link_to h(root.name), :controller => 'projects', :action => 'show', :id => root %></li>
                 <% end %>
-            <% else %>
-                <li><%= link_to h(root.name), :controller => 'projects', :action => 'show', :id => root %></li>
-            <% end %>
-            <ul>
-                <% user_projects_by_root[root].sort.each do |project| %>
-                    <% next if project == root %>
+                <ul>
+                    <% user_projects_by_root[root].sort.each do |project| %>
+                        <% next if project == root %>
                         <% if !@project.nil? %>
                             <% if jump_to_current_view_implemented == true %>
                                 <li><%= link_to_if !(project.identifier == @project.identifier), h(project.name), :controller => 'projects', :action => 'show', :id => project, :jump => current_menu_item %></li>
@@ -24,8 +33,9 @@
                         <% else %>
                             <li><%= link_to h(project.name), :controller => 'projects', :action => 'show', :id => project %></li>
                         <% end %>
-                <% end %>
-            </ul>
-        <% end %>
-    </ul>
+                    <% end %>
+                </ul>
+            <% end %>
+        </ul>
+    <% end %>
 </div>
