Fixed solution for #238 (done in r39) after implementation of 'NestedProjects'-support.
This commit references issue #204.


git-svn-id: svn://evil-dev.net:3690/redmine-collapse/sandbox/070409_0104-NestedProjects@54 1809a232-8a5f-0410-be6b-a332444e9cb2

--- a/app/views/left_menu/_projects.rhtml
+++ b/app/views/left_menu/_projects.rhtml
@@ -6,10 +6,12 @@
     <% user_projects_by_root = User.current.projects.find(:all, :include => :parent).group_by(&:root) %>
 <% end %>
 
-<div id="projects">
-    <% if render_project_hierarchy_implemented == true %>
+<% if render_project_hierarchy_implemented == true %>
+    <div id="projects-nested">
         <%= render_involved_projects_list(user_projects) %>
-    <% else %>
+    </div>
+<% else %>
+    <div id="projects-tree">
         <ul>
             <% user_projects_by_root.keys.sort.each do |root| %>
                 <% if !@project.nil? %>
@@ -37,5 +39,5 @@
                 </ul>
             <% end %>
         </ul>
-    <% end %>
-</div>
+    </div>
+<% end %>
