Completed solution for #239. No functional changes (intended).
This commit references issue #239.


git-svn-id: svn://evil-dev.net:3690/redmine-collapse/trunk@56 1809a232-8a5f-0410-be6b-a332444e9cb2

--- a/assets/stylesheets/collapse.css
+++ b/assets/stylesheets/collapse.css
@@ -1,14 +1,19 @@
+/******************** GENERIC ********************/
+
 /*****
 * Redmine Core CSS-Overloads for Collapse
 *****/
 
 /***** Overloading Redmine Core layout-selectors *****/
 #main {
-    background-color: inherit;
+    background-color: inherit; /* not in IE7 */
     padding: 2px 0px 0px 14px;
 }
-
-html>body #content { height: auto; min-height: 600px; overflow: auto; }
+html>body #content {
+    height: auto;
+    min-height: 600px;
+    overflow: auto;
+}
 
 /******************** DEFAULT THEME ********************/
 
