--- a/app/views/settings/_collapse_settings.rhtml
+++ b/app/views/settings/_collapse_settings.rhtml
@@ -1,11 +1,11 @@
-<p><label><%= l(:setting_collapse_ptab) %></label>
+<p><label><%= l(:setting_collapse_showprojectstab) %></label>
 <%= select_tag 'settings[show_projects_tab]',
       options_for_select( [[l(:general_text_No), "0"],
                            [l(:general_text_Yes), "1"]
                           ], @settings ['show_projects_tab'] )
 %>
 </p>
-<p><label><%= l(:setting_hide_pselector) %></label>
+<p><label><%= l(:setting_collapse_hideprojectselector) %></label>
 <%= select_tag 'settings[hide_project_selector]',
       options_for_select( [[l(:general_text_No), "0"],
                            [l(:general_text_Yes), "1"]
