--- a/app/views/settings/_collapse_settings.rhtml
+++ b/app/views/settings/_collapse_settings.rhtml
@@ -9,6 +9,18 @@
   <%= hidden_field_tag 'settings[hide_project_selector]', 0 %>
 </p>
 <p>
+  <label><%= l(:setting_collapse_showmenustab) %></label>
+  <%= check_box_tag 'settings[show_menus_tab]', 1, Setting.plugin_redmine_collapse['show_menus_tab'] == '1', :onclick=>"Element.toggle('menustab_content_settings'); return true;" %>
+  <%= hidden_field_tag 'settings[show_menus_tab]', 0 %>
+</p>
+<div id="menustab_content_settings" <%= Setting.plugin_redmine_collapse['show_menus_tab'] == '1' ? '' : 'style="display:none"' %>>
+  <p>
+    <label><%= l(:setting_collapse_showprojectmenuinmenustab) %></label>
+    <%= check_box_tag 'settings[show_projectmenu_in_menustab]', 1, Setting.plugin_redmine_collapse['show_projectmenu_in_menustab'] == '1' %>
+    <%= hidden_field_tag 'settings[show_projectmenu_in_menustab]', 0 %>
+  </p>
+</div>
+<p>
   <label><%= l(:setting_collapse_position) %></label>
   <%= select_tag 'settings[position]', options_for_select( [[l(:label_collapse_left), "0"], [l(:label_collapse_right), "1"]], @settings ['position'] ) %>
   (Not yet implemented)
