Corrected used i18n-string on @_projects@-partial from @label_project_plural@ to @label_projects_tab@.
This commit references issue #180.


git-svn-id: svn://evil-dev.net:3690/redmine-collapse/sandbox/140409_1033-MenusTab@66 1809a232-8a5f-0410-be6b-a332444e9cb2

--- a/app/views/left_menu/_projects.rhtml
+++ b/app/views/left_menu/_projects.rhtml
@@ -1,4 +1,4 @@
-<h3><%= l(:label_project_plural) %></h3>
+<h3><%= l(:label_projects_tab) %></h3>
 
 <% if render_project_hierarchy_implemented == true %>
     <% user_projects = User.current.projects.find(:all) %>
