Modified rendering of the main-menu (project-menu) to match the implementation of the menus tab.
After this commit the expected behaviour is that the main-menu is rendered through the @base@-layout *unless*:
* @Setting.plugin_redmine_collapse['show_menus_tab'] == '1'@ *AND*
* @Setting.plugin_redmine_collapse['show_projectmenu_in_menustab'] == '1'@

This commit references issue #180.


git-svn-id: svn://evil-dev.net:3690/redmine-collapse/sandbox/140409_1033-MenusTab@68 1809a232-8a5f-0410-be6b-a332444e9cb2

--- a/app/views/layouts/base.rhtml
+++ b/app/views/layouts/base.rhtml
@@ -49,9 +49,11 @@
             <h1><%= h(@project && !@project.new_record? ? @project.name : Setting.app_title) %></h1>
         <% end %>
         
-        <div id="main-menu">
-            <%= render_main_menu(@project) %>
-        </div>
+        <% unless Setting.plugin_redmine_collapse['show_menus_tab'] == '1' && Setting.plugin_redmine_collapse['show_projectmenu_in_menustab'] == '1' %>
+            <div id="main-menu">
+                <%= render_main_menu(@project) %>
+            </div>
+        <% end %>
     </div>
     
     <%= tag('div', {:id => 'main', :class => 'nosidebar'}, true) %>
